--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
         .btn-portaly { background-color: #333; border: 1px solid #555; } /* Portaly 黑灰色 */
         .btn-x { background-color: #000; }
         .btn-ig { background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%); }
+        .btn-plurk { background-color: #ff6600; }
 
         /* Responsive Chart Container */
         .chart-container {
@@ -329,10 +330,12 @@
                 <div class="links-grid">
                     <a href="https://www.twitch.tv/yorukahwss" target="_blank" class="btn-link btn-twitch">Twitch 直播</a>
                     <a href="https://www.youtube.com/@neppuuyoruka" target="_blank" class="btn-link btn-yt">YouTube 頻道</a>
+                    <a href="https://www.youtube.com/@yorukahwss_VOD" target="_blank" class="btn-link btn-yt">VOD 頻道</a>
                     <a href="https://myship.7-11.com.tw/" target="_blank" class="btn-link btn-store">周邊販售 (MyShip)</a>
                     <a href="https://portaly.cc/yorukahwss" target="_blank" class="btn-link btn-portaly">Portaly 傳送門</a>
                     <a href="https://twitter.com/yorukahwss" target="_blank" class="btn-link btn-x">X / Twitter</a>
                     <a href="https://www.instagram.com/yorukahwss" target="_blank" class="btn-link btn-ig">Instagram</a>
+                    <a href="https://www.plurk.com/yorukahwss" target="_blank" class="btn-link btn-plurk">Plurk</a>
                 </div>
             </div>
 
